--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -1,5 +1,7 @@
 <%- include('includes/head') %>
 <%- include('includes/nav') %>
+<link rel="stylesheet" href="/styles/home.css">
+
   <div class="container mt-2">
      <div class="row gx-5">
         <div class="col-md-6">
@@ -8,32 +10,17 @@
                  <h1>Associações</h1>
                  <h2>44</h2>
               </div>
-              <img src="../../public/img/iconeAssociacoes.svg"  class="icone" alt="Imagem das associações">
+              <img src="/img/associacao.png"  class="icone" alt="Imagem das associações">
+            </div>
+         </div>
+         <div class="col-md-6">
+            <div class="d-flex blocos">
+               <div class="totalQuantidade">
+                  <h1>Pequenos Agricultores</h1>
+                  <h2>94</h2>
+               </div>
+               <img src="/img/agricultor.png"  class="icone" alt="Imagem de pequenos agricultor">
            </div>
-           <div class=" mt-5 totalQuantidade">
-              <h2>Cadastro desatualizados</h2>
-              <h3>10</h3>
-              <div class=" mt-5 totalQuantidade">
-                 <h2>Cadastro não finalizados</h2>
-                 <h3>4</h3>
-              </div>
-           </div>
-        </div>
-        <div class="col-md-6">
-           <div class="d-flex blocos">
-              <div class="totalQuantidade">
-                 <h1>Pequenos Agricultores</h1>
-                 <h2>94</h2>
-              </div>
-              <img src="./img/iconePequenoAgricultores.svg"  class="icone" alt="Imagem de pequenos agricu">
-           </div>
-           <div class=" mt-5 totalQuantidade">
-              <h2>cadastro desatualizados</h2>
-              <h3>10</h3>
-              <div class=" mt-5 totalQuantidade">
-                 <h2>Cadastro não finalizados</h2>
-                 <h3>4</h3>
-              </div>
            </div>
         </div>
      </div>
