--- a/src/views/includes/messages.ejs
+++ b/src/views/includes/messages.ejs
@@ -1,7 +1,7 @@
 <% if(errors.length > 0) { %>
 <div class="row">
     <div class="col my-3">
-      <div class="alert alert-danger">
+      <div class="alert alert-danger" role="alert">
         <% errors.forEach(erro => { %>
             <%= erro %><br>
             <% }); %>
