--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -8,7 +8,8 @@
            <div class="d-flex blocos">
               <div class="totalQuantidade">
                  <h1>Associações</h1>
-                 <h2>44</h2>
+                 <h2><%= totalAgricultores %></h2>
+
               </div>
               <img src="/img/associacao.png"  class="icone" alt="Imagem das associações">
             </div>
@@ -17,7 +18,7 @@
             <div class="d-flex blocos">
                <div class="totalQuantidade">
                   <h1>Pequenos Agricultores</h1>
-                  <h2>94</h2>
+                  <h2><%= totalAgricultores %></h2>
                </div>
                <img src="/img/agricultor.png"  class="icone" alt="Imagem de pequenos agricultor">
            </div>
