--- a/src/views/includes/nav.ejs
+++ b/src/views/includes/nav.ejs
@@ -2,8 +2,8 @@
 
 <nav class="navbar navbar-expand-lg">
   <div class="container-fluid navmenu">
-    <img src="/img/LogoCMAS.svg" class="logocmas" alt="logo do cmas" height="60">
     <a class="navbar-brand" href="/">
+      <img src="/img/LogoCMAS.svg" class="logocmas" alt="logo do cmas" height="60">
       </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -11,25 +11,18 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
      <ul class="navbar-nav ml-auto">
 
-    <% if(user) { %>
       <li class="nav-item">
-       <li class="nav-item">
-        <a class="nav-link text-white" href="/login/index">Início</a>
+      <li class="nav-item">
+        <a class="nav-link text-white" href="/cadastrar">Cadastrar agricultor</a>
       </li>
-
       <li class="nav-item">
-        <a class="nav-link text-white" href="/cadastrar">Cadastrar</a>
+        <a class="nav-link text-white" href="/loginCadastrar">Cadastrar usuários</a>
       </li>
       <li class="nav-item">
         <a class="nav-link text-white" href="/buscar">Buscar</a>
       </li>
         <a class="nav-link text-white" href="/login/logout">Sair</a>
       </li>
-    <% } else { %>
-      <li class="nav-item">
-        <a class="nav-link text-white" href="/">Entrar</a>
-      </li>
-      <% } %>
 
   </ul>
     </div>
